# Odoo-Finance-Data-Quality-Auditor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/profiles/: audit_prep.yml  default.yml  manufacturing.yml  multi_company.yml
data/sample/: accounts.csv  bank_statement_lines.csv  customer_invoices.csv  inventory_valuation.csv  journal_entries.csv  vendor_bills.csv
docs/: case-study.md
src/odoo_finance_data_auditor/: __init__.py  cli.py  config.py  dashboard.py  email_summary.py  exceptions.py  loader.py  reporting.py  rules.py
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_email_summary.py  test_loader.py  test_reporting.py  test_rules.py
